--- a/index.html
+++ b/index.html
@@ -123,27 +123,27 @@
 
   <section class="produtos">
     <div class="produto">
-      <img src="CUIA ALONGADA.jpeg" alt="Cuia Tradicional" />
-      <h3>Cuia Branca </h3>
-      <p>R$ 149,90</p>
+      <img src="ESTOQUE NOVO 2.png" alt="Cuia Tradicional" />
+      <h3>AGUARDE </h3>
+      <p>R$ </p>
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <div class="produto">
-      <img src="CUIA CANUDO.jpeg" alt="Cuia Personalizada" />
-      <h3>Cuia Azul</h3>
-      <p>R$ 149,90</p>
+      <img src="ESTOQUE NOVO 3.png" alt="Cuia Personalizada" />
+      <h3>AGUARDE</h3>
+      <p>R$ </p>
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <div class="produto">
       <img src="ERVA.png" alt="Cuia Premium" />
       <h3>Erva Cor e Sabor</h3>
-      <p>R$ 15,90</p>
+      <p>R$ 15,90 </p>
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <div class="produto">
-      <img src="CUIA.jpeg" alt="Cuia Campeira" />
-      <h3>Cuia Marrom</h3>
-      <p>R$ 149,90</p>
+      <img src="ESTOQUE NOVO.png" alt="Cuia Campeira" />
+      <h3>AGUARDE</h3>
+      <p>R$ </p>
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <!-- Adicione mais produtos copiando os blocos acima -->
