--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     header img {
-      height: 60px;
+      height: 240px;
     }
 
     .sobre {
@@ -123,15 +123,15 @@
 
   <section class="produtos">
     <div class="produto">
-      <img src="ESTOQUE NOVO 2.png" alt="Cuia Tradicional" />
-      <h3>AGUARDE </h3>
-      <p>R$ </p>
+      <img src="CUIA CANUDO AZUL.jpeg" alt="Cuia Tradicional" />
+      <h3>CUIA CANUDO AZUL </h3>
+      <p>R$155,90 </p>
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <div class="produto">
-      <img src="ESTOQUE NOVO 3.png" alt="Cuia Personalizada" />
-      <h3>AGUARDE</h3>
-      <p>R$ </p>
+      <img src="CUIA ALONGADA CIANO.jpeg" alt="Cuia Personalizada" />
+      <h3>CUIA ALONGADA CIANO</h3>
+      <p>R$149,90 </p>
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <div class="produto">
@@ -141,9 +141,15 @@
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <div class="produto">
-      <img src="ESTOQUE NOVO.png" alt="Cuia Campeira" />
-      <h3>AGUARDE</h3>
-      <p>R$ </p>
+      <img src="CUIA ALONGADA ROXA.jpeg" alt="Cuia Campeira" />
+      <h3>CUIA ALONGADA ROXA</h3>
+      <p>R$149,90 </p>
+      <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
+    </div>
+     <div class="produto">
+      <img src="CUIA ALONGADA DE GLITTER.jpeg" alt="Cuia Campeira" />
+      <h3>CUIA ALONGADA DE GLITTER</h3>
+      <p>R$159,90 </p>
       <a class="botao-compra" href="https://wa.me/5546999342850" target="_blank">Comprar pelo WhatsApp</a>
     </div>
     <!-- Adicione mais produtos copiando os blocos acima -->
